--- a/GiaSuFeedBack/GiaSuFeedBack/MainPage.xaml
+++ b/GiaSuFeedBack/GiaSuFeedBack/MainPage.xaml
@@ -4,7 +4,9 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:data="clr-namespace:GiaSuFeedBack" 
-             xmlns:skia="clr-namespace:SkiaSharp.Views.Forms;assembly=SkiaSharp.Views.Forms"
+             xmlns:skia="clr-namespace:SkiaSharp.Views.Forms;assembly=SkiaSharp.Views.Forms" 
+             xmlns:pv="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
+             xmlns:scroll="clr-namespace:Xamarin.Forms.Extended;assembly=Xamarin.Forms.Extended.InfiniteScrolling"
              mc:Ignorable="d" NavigationPage.HasNavigationBar="False"
              BackgroundColor="#3C4564"
              x:Class="GiaSuFeedBack.MainPage">
@@ -20,81 +22,102 @@
         <Frame x:Name="TopBigFrame" Grid.Row="0" CornerRadius="20" Margin="0,-20,0,0" Padding="0">
                 <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="45"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <Image Source="Image2.jpg" Grid.RowSpan="3" HeightRequest="80" HorizontalOptions="FillAndExpand" Aspect="AspectFill" Margin="0"/>
-                    <Grid Grid.Row="0" Margin="5,30,5,0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <ImageButton x:Name="FilterButton"  Grid.Column="0" Source="Filter.png" BackgroundColor="Transparent" Padding="5"
+                <Grid Grid.Row="0" Margin="5,30,5,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <ImageButton x:Name="FilterButton"  Grid.Column="0" Source="Filter.png" BackgroundColor="Transparent" Padding="0"
                                  WidthRequest="40" HeightRequest="40" CornerRadius="10" HorizontalOptions="Start"/>
-                        <Label Grid.Column="1" Text="Feed Back" FontAttributes="Bold" TextColor="#E3E6E9" VerticalOptions="CenterAndExpand" HorizontalOptions="Center"/>
-                        <ImageButton Grid.Column="2" Source="Logout.png" BackgroundColor="Transparent" Padding="5"  
+                    <Label Grid.Column="1" Text="Feed Back" FontAttributes="Bold" TextColor="#E3E6E9" VerticalOptions="CenterAndExpand" HorizontalOptions="Center"/>
+                    <ImageButton Grid.Column="2" Source="Logout.png" BackgroundColor="Transparent" Padding="0"  
                                  WidthRequest="40" HeightRequest="40" CornerRadius="10" HorizontalOptions="End"/>
-                    </Grid>
-                    <StackLayout Grid.Row="1" Orientation="Horizontal" HorizontalOptions="Center" VerticalOptions="CenterAndExpand">
-                        <Label Text="Total Bug" FontSize="30" TextColor="#E3E6E9"/>
-                    </StackLayout>
-                    <StackLayout Grid.Row="2" HorizontalOptions="Center" VerticalOptions="Center" Margin="0,0,0,50">
-                        <Label Text="Total Fixed" FontSize="20" TextColor="#E3E6E9"/>
-                    </StackLayout>
                 </Grid>
+                    
+                <Label Grid.Row="1" Text="Total Bug" FontSize="30" TextColor="#E3E6E9"  
+                       HorizontalOptions="Center" VerticalOptions="CenterAndExpand"/>
+                    
+                <Label Grid.Row="2" Text="Total Fixed" FontSize="20" TextColor="#E3E6E9"  
+                       HorizontalOptions="Center" VerticalOptions="Center" Margin="0,0,0,50"/>
+            </Grid>
             </Frame>
 
         <ImageButton x:Name="ActiveButton" Grid.Row="1" Source="ChangeButton.png" 
-                     HeightRequest="50" BackgroundColor="Transparent" WidthRequest="50" Margin="0,-30,50,0" HorizontalOptions="End" 
-                     CornerRadius="25"  
+                     HeightRequest="70" BackgroundColor="Transparent" WidthRequest="70" Margin="0,-40,50,0" HorizontalOptions="End" 
+                     CornerRadius="35"  
                      Clicked="ActiveButton_Clicked"/>
-        <Slider Margin="20" Maximum="1000" Minimum="0" ValueChanged="Slider_ValueChanged" VerticalOptions="End" Value="0"/>
 
 
+        <pv:PancakeView x:Name="Header" Grid.Row="2" 
+                        HorizontalOptions="Start" Margin="-10,-25,0,0" BackgroundColor="#697597" 
+                        CornerRadius="10" Padding="10">
+            <StackLayout Margin="30,0,0,0" Orientation="Horizontal">
+                <Label Text="Windows" TextColor="#E3E6E9" FontSize="15" Margin="5"/>
+                <Label Text="IOS" TextColor="#E3E6E9" FontSize="15" Margin="5"/>
+                <Label Text="Androd" TextColor="#E3E6E9" FontSize="15" Margin="5"/>
+            </StackLayout>
+        </pv:PancakeView>
 
-        <StackLayout x:Name="Header" Grid.Row="2" Orientation="Vertical" HorizontalOptions="Start"  Margin="60,-25,0,0">
-            <Label Text="Windows" TextColor="#E3E6E9" FontSize="15"/>
-            <Label Text="IOS" TextColor="#E3E6E9" FontSize="15"/>
-            <Label Text="Androd" TextColor="#E3E6E9" FontSize="15"/>
-        </StackLayout>
 
-        <ListView x:Name="FeedbackList" Grid.Row="3" HorizontalOptions="FillAndExpand" RowHeight="100" BackgroundColor="#3C4564" 
-                  ItemTapped="FeedbackList_ItemTapped"
-                  VerticalScrollBarVisibility="Never" HorizontalScrollBarVisibility="Never"
-                  >
+        <CollectionView x:Name="FeedbackList" Grid.Row="3" HorizontalOptions="FillAndExpand" SelectionMode="None" Margin="20,10,20,5">
+            <CollectionView.ItemsLayout>
+                <LinearItemsLayout Orientation="Vertical" ItemSpacing="20"/>
+            </CollectionView.ItemsLayout>
+            <CollectionView.ItemTemplate>
+                <DataTemplate x:DataType="data:FeedBack">
+                    <pv:PancakeView BorderColor="#697597" HasShadow="True" BackgroundColor="#697597" CornerRadius="10" Padding="0">
+                        <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="0.5*"/>
+                                <ColumnDefinition Width="2*"/>
+                            </Grid.ColumnDefinitions>
+                            <Image Source="Androd.png" BackgroundColor="#E3E6E9" HeightRequest="50" WidthRequest="50" />
+                            <BoxView Grid.Column="1" BackgroundColor="#E3E6E9" Margin="0" WidthRequest="1" HorizontalOptions="Fill" VerticalOptions="Fill"/>
+                            <StackLayout Grid.Column="2" Orientation="Horizontal">
+                                <Label Grid.Column="0" Text="{x:Binding userName}" TextColor="#E3E6E9" HorizontalOptions="Start" VerticalOptions="CenterAndExpand"/>
+                            </StackLayout>
+                            <StackLayout Grid.Column="3" Padding="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                                <Label Grid.Column="1" Text="{x:Binding title}" TextColor="#E3E6E9" VerticalOptions="Start"/>
+                                <BoxView HeightRequest="1" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="#E3E6E9"/>
+                                <Label Text="{x:Binding detail}" TextColor="#E3E6E9" VerticalOptions="Start"/>
+                            </StackLayout>
+                        </Grid>
+                    </pv:PancakeView>
+                </DataTemplate>
+            </CollectionView.ItemTemplate> 
+        </CollectionView> 
+<!--      <ListView x:Name="FeedbackList" Grid.Row="3" RowHeight="200" VerticalScrollBarVisibility = "Never" >
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="data:FeedBack">
                     <ViewCell>
-                        <Frame BorderColor="#697597" Margin="10" HasShadow="True" BackgroundColor="#697597" CornerRadius="10" Padding="0">
-                           <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="0.5*"/>
-                                        <ColumnDefinition Width="Auto"/>
-                                        <ColumnDefinition Width="0.5*"/>
-                                        <ColumnDefinition Width="2*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Image Grid.Column="0" Source="Windows.png" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="60" WidthRequest="60"/>
-                                    <BoxView Grid.Column="1" WidthRequest="1" HorizontalOptions="Start" VerticalOptions="FillAndExpand" Color="#E3E6E9"/>
-                                    <Label Grid.Column="2" Text="{x:Binding userName, Mode=OneWay}" 
-                                           FontAttributes="Bold" FontSize="15"
-                                           TextColor="#E3E6E9" HorizontalOptions="Start" VerticalOptions="Center"/>
-                                    <Label Grid.Column="3" Text="{x:Binding title, Mode=OneWay}"
-                                           FontSize="15"
-                                           TextColor="#E3E6E9" HorizontalOptions="Start" VerticalOptions="Center"/>
-                                </Grid>
-
-                                <!--    <Label Text="{x:Binding detail, Mode=OneWay}" TextColor="#E3E6E9" HeightRequest="40"/> -->
-
-                      </Frame>
+                        <StackLayout Orientation="Horizontal">
+                            <Label Text="{x:Binding userID}"/>
+                            <Label Text="{x:Binding title}"/>
+                            <Label Text="{x:Binding userName}"/>
+                            <Label Text="{x:Binding detail}"/>
+                            <Label Text="{x:Binding feedBackID}"/>
+                        </StackLayout>
                     </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
-        </ListView>
+        </ListView>  -->
+        <pv:PancakeView Grid.Row="4" CornerRadius="10" HasShadow="True">
+            <StackLayout HeightRequest="40">
+                <Label  FontAttributes="Bold" FontSize="20" Text="TO TECHS" TextColor="#E3E6E9" 
+                        HorizontalTextAlignment="Center"
+                        BackgroundColor="#3D476A" 
+                        VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
+            </StackLayout>
+        </pv:PancakeView>
         
-        <Label Grid.Row="4" FontAttributes="Bold" FontSize="20" Text="TO TECHS" TextColor="#E3E6E9" HorizontalTextAlignment="Center"
-               HeightRequest="60" BackgroundColor="#3D476A" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
 
     </Grid>
 
